# local-sandbox

./: 1.out.txt  1.ps1  2.txt  AGENTS.md  CHANGELOG.md  Cargo.toml  MANIFEST.md  PLAN.md  README.md  STATE.md  install.ps1  install.sh  justfile  tmp.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  nodejs-binding.yml  publish-crates.yml  publish-sdk.yml  release.yml  release_nodejs.yml  windows-lsb-hardware.yml
bindings/nodejs/: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  index.d.ts  package.json
bindings/nodejs/npm/darwin-arm64/: README.md  package.json
bindings/nodejs/npm/darwin-x64/: README.md  package.json
bindings/nodejs/npm/win32-x64-msvc/: package.json
bindings/nodejs/scripts/: test-with-signed-node.sh  windows-preflight-smoke.mjs
bindings/nodejs/src/: config.rs  error.rs  lib.rs  process.rs  sandbox.rs  streams.rs  types.rs
bindings/nodejs/test/: api-shape.spec.ts  helpers.ts  index.spec.ts  package-metadata.spec.ts  startup.spec.ts  streaming.spec.ts
crates/lsb-cli/: Cargo.toml
crates/lsb-cli/src/: assets.rs  checkpoint.rs  cli.rs  config.rs  main.rs  stdio.rs  vm.rs
crates/lsb-guest/: Cargo.toml
crates/lsb-guest/src/: main.rs
crates/lsb-platform/: Cargo.toml
crates/lsb-platform/src/: lib.rs  windows_named_pipe.rs
crates/lsb-platform/src/linux_aarch64/: mod.rs
crates/lsb-platform/src/linux_x86_64/: mod.rs
crates/lsb-platform/src/macos_aarch64/: mod.rs  vm.rs
crates/lsb-platform/src/macos_x86_64/: configuration.rs  mod.rs  serial.rs  storage.rs  terminal.rs
crates/lsb-platform/src/windows_aarch64/: mod.rs
crates/lsb-platform/src/windows_x86_64/: backend.rs  config.rs  errors.rs  host_tools.rs  mod.rs
crates/lsb-platform/src/windows_x86_64/control/: mod.rs  mux.rs  virtio_serial.rs
crates/lsb-platform/src/windows_x86_64/fs/: copy.rs  mod.rs  mount_plan.rs
crates/lsb-platform/src/windows_x86_64/fs/smb/: acl.rs  admin.rs  lifecycle.rs  mod.rs  password.rs  share.rs  types.rs  user.rs
crates/lsb-platform/src/windows_x86_64/network/: mod.rs
crates/lsb-platform/src/windows_x86_64/qemu/: argv.rs  boot.rs  config.rs  discovery.rs  mod.rs  process.rs
crates/lsb-proto/: Cargo.toml
crates/lsb-proto/src/: frame.rs  lib.rs
crates/lsb-proxy/: Cargo.toml
crates/lsb-proxy/src/: config.rs  device.rs  dns.rs  lib.rs  proxy.rs  stack.rs  tls.rs
crates/lsb-sdk/: Cargo.toml
crates/lsb-sdk/src/: assets.rs  host_tools.rs  lib.rs  process.rs  runtime.rs  shell.rs  storage.rs  types.rs  watch.rs
crates/lsb-store/: Cargo.toml
crates/lsb-store/src/: backend.rs  base.rs  cas.rs  lib.rs  nbd.rs  windows_checkpoint.rs
crates/lsb-vm/: Cargo.toml
crates/lsb-vm/src/: lib.rs  sandbox.rs
crates/shuru-cli/: Cargo.toml
crates/shuru-cli/src/: assets.rs  checkpoint.rs  cli.rs  config.rs  main.rs  stdio.rs  vm.rs
crates/shuru-darwin/: Cargo.toml
crates/shuru-darwin/src/: lib.rs  network.rs
crates/shuru-guest/: Cargo.toml
crates/shuru-guest/src/: main.rs
crates/shuru-platform/: Cargo.toml
crates/shuru-platform/src/: lib.rs
crates/shuru-platform/src/linux_x86_64/: mod.rs
crates/shuru-platform/src/macos_aarch64/: mod.rs
crates/shuru-platform/src/macos_x86_64/: mod.rs  network.rs  storage.rs
crates/shuru-platform/src/macos_x86_64/sys/: queue.rs
crates/shuru-platform/src/windows_x86_64/: mod.rs
crates/shuru-proto/: Cargo.toml
crates/shuru-proto/src/: frame.rs  lib.rs
crates/shuru-proxy/: Cargo.toml
crates/shuru-proxy/src/: config.rs  device.rs  dns.rs  lib.rs  proxy.rs  stack.rs  tls.rs
crates/shuru-sdk/: Cargo.toml
crates/shuru-vm/: Cargo.toml
crates/shuru-vm/src/: lib.rs  sandbox.rs
docs/: architecture.md
docs/windows-port/: AGENTS.md  README.md  architecture.md  decisions.md  diagnostics.md  future-work.md  mvp-handoff.md  review-checklist.md  rfc-qemu-whpx.md  risk-register.md  runner-setup.md  security-checklist.md  validation.md
docs/windows-port/agent-workspace/: README.md  architecture-boundaries.md  code-map.md  decisions.md  diagnostics.md  experiments.md  issue-backlog.md  playbook.md  review-checklist.md  risk-register.md  runner-setup.md  security-checklist.md  state.md  traceability.md  validation.md
docs/windows-port/agent-workspace/milestones/: 00-index.md  01-windows-compile-stubs.md  02-qemu-discovery-preflight.md  03-qemu-argv-builder.md  04-qemu-process-lifecycle.md  05-direct-linux-boot-serial-logs.md  06-virtio-serial-control-transport.md  07-guest-ready-handshake.md  08-exec-command.md  09-copy-in-copy-out-data-plane.md  10-mount-mvp-semantics.md  11-port-forwarding-no-network.md  12-network-policy-proxy-integration.md  13-checkpoint-store-mvp.md  14-node-packaging.md  15-ci-diagnostics-hardening.md
docs/windows-port/agent-workspace/templates/: codex-issue-prompt.md  decision-record.md  milestone-handoff.md  test-report.md
kernel/: lsb_defconfig  lsb_x86_64_defconfig  shuru_defconfig  shuru_x86_64_defconfig
scripts/: build-kernel.sh  collect-windows-diagnostics.ps1  prepare-rootfs.sh  windows-e2e.ps1  windows-smoke.ps1
skills/lsb/: SKILL.md
skills/lsb/references/: checkpoints.md  config.md  networking.md
skills/shuru/: SKILL.md
skills/shuru/references/: checkpoints.md  config.md  networking.md
www/: astro.config.mjs  package.json
www/public/: CNAME
www/src/components/: CodeBlock.astro
www/src/components/landing/: CliSection.astro  ConfigSection.astro  CopyButton.astro  Footer.astro  GetStartedSection.astro  HeroSection.astro  Nav.astro  SkillSection.astro  TabbedSection.astro
www/src/layouts/: Layout.astro
www/src/pages/: index.astro
www/src/pages/blog/: local-sandbox-and-execution-layer-for-autonomous-agents.astro
xtask/: Cargo.toml
xtask/src/: args.rs  context.rs  guest.rs  kernel.rs  main.rs  release.rs  rootfs.rs
