[workspace]
resolver = "2"
members = [
    "crates/lsb-cli",
    "crates/lsb-platform",
    "crates/lsb-proto",
    "crates/lsb-proxy",
    "crates/lsb-sdk",
    "crates/lsb-vm",
    "crates/lsb-store",
    "crates/lsb-guest",
    "xtask",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
