[package]
authors = ["SuperHQ", "LocalSandBox"]
edition = "2021"
name = "lsb-nodejs"
version = "0.1.0"
description = "Native Node.js bindings for lsb microVM sandboxes"
license = "Apache-2.0"
repository = "https://github.com/LocalSandBox/local-sandbox.git"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
napi = { version = "3.0.0", default-features = false, features = [
    "napi8",
    "tokio_rt",
] }
napi-derive = "3.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
serde_json = "1"
lsb-proto = { path = "../../crates/lsb-proto" }
lsb-proxy = { path = "../../crates/lsb-proxy" }
lsb-sdk = { path = "../../crates/lsb-sdk" }
lsb-vm = { path = "../../crates/lsb-vm" }
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"

[workspace]
