[package]
name = "lsb-cli"
version = "0.4.1"
edition = "2021"

[[bin]]
name = "lsb"
path = "src/main.rs"

[dependencies]
lsb-platform = { path = "../lsb-platform" }
lsb-vm = { path = "../lsb-vm" }
lsb-proto = { path = "../lsb-proto" }
lsb-proxy = { path = "../lsb-proxy" }
lsb-sdk = { path = "../lsb-sdk" }
lsb-store = { path = "../lsb-store" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "3", features = ["json"] }
base64 = "0.22.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
