[package]
name = "lsb-platform"
version = "0.4.1"
edition = "2021"
description = "Platform abstraction and metadata for lsb"
license = "Apache-2.0"
repository = "https://github.com/LocalSandBox/local-sandbox.git"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
getrandom = "0.3"
lsb-proto = { version = "0.4.1", path = "../lsb-proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
dispatch2 = "0.3"
libc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSURL",
    "NSArray",
    "NSError",
    "NSFileHandle",
    "NSKeyValueObserving",
    "NSDictionary",
    "NSObject",
    "NSObjCRuntime",
] }
objc2-virtualization = { version = "0.3", features = [
    "dispatch2",
    "VZFileHandleNetworkDeviceAttachment",
    "VZNetworkBlockDeviceStorageDeviceAttachment",
] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }
