[package]
name = "lsb-proto"
version = "0.4.1"
edition = "2021"
description = "Shared wire protocol for lsb host/guest communication"
license = "Apache-2.0"
repository = "https://github.com/LocalSandBox/local-sandbox.git"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
