[package]
name = "lsb-proxy"
version = "0.4.1"
edition = "2021"
description = "Transparent network proxy for lsb microVMs"
license = "Apache-2.0"
repository = "https://github.com/LocalSandBox/local-sandbox.git"

[dependencies]
anyhow = "1"

[target.'cfg(any(unix, windows))'.dependencies]
smoltcp = { version = "0.12", default-features = false, features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "tls12"] }
rcgen = "0.13"
webpki-roots = "1"
boring = "4"
tokio-boring = "4"
simple-dns = "0.9"
lru = "0.14"
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
