[package]
name = "lsb-sdk"
version = "0.4.1"
edition = "2021"
description = "Async Rust SDK for lsb microVMs"
license = "Apache-2.0"
repository = "https://github.com/LocalSandBox/local-sandbox.git"

[dependencies]
lsb-platform = { version = "0.4.1", path = "../lsb-platform" }
lsb-vm = { version = "0.4.1", path = "../lsb-vm" }
lsb-proto = { version = "0.4.1", path = "../lsb-proto" }
lsb-proxy = { version = "0.4.1", path = "../lsb-proxy" }
lsb-store = { version = "0.4.1", path = "../lsb-store" }
tokio = { version = "1", features = ["sync"] }
anyhow = "1"
flate2 = "1"
tar = "0.4"
tracing = "0.1"
serde_json = "1"
sha2 = "0.10"
ureq = "3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync"] }
