[package]
name = "lsb-store"
version = "0.0.1"
edition = "2021"
description = "NBD-backed storage layer for lsb microVMs"
license = "Apache-2.0"
repository = "https://github.com/Gnosnay/local-sandbox"

[dev-dependencies]
tempfile = "3"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync"] }
anyhow = "1"
tracing = "0.1"
libc = "0.2"
blake3 = "1"
