[package]
name = "lsb-store"
version = "0.3.8"
edition = "2021"
description = "NBD-backed storage layer for lsb microVMs"
license = "Apache-2.0"
repository = "https://github.com/LocalSandBox/local-sandbox.git"

[dev-dependencies]
tempfile = "3"

[dependencies]
lsb-platform = { version = "0.3.8", path = "../lsb-platform" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync"] }
anyhow = "1"
tracing = "0.1"
libc = "0.2"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
