[package]
name = "shuru-proxy"
version = "0.1.0"
edition = "2021"
description = "Transparent network proxy for shuru microVMs"

[dependencies]
smoltcp = { version = "0.12", default-features = false, features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "tls12"] }
rcgen = "0.13"
webpki-roots = "1"
simple-dns = "0.9"
lru = "0.14"
anyhow = "1"
tracing = "0.1"
libc = "0.2"
