[package]
name = "shuru-sdk"
version = "0.3.0"
edition = "2021"
description = "Async Rust SDK for Shuru microVMs"
license = "Apache-2.0"
repository = "https://github.com/superhq-ai/shuru"

[dependencies]
shuru-vm = { version = "0.3.1", path = "../shuru-vm" }
shuru-proto = { version = "0.3.0", path = "../shuru-proto" }
shuru-proxy = { version = "0.2.0", path = "../shuru-proxy" }
tokio = { version = "1", features = ["sync"] }
anyhow = "1"
libc = "0.2"
tracing = "0.1"
