[package]
name = "shuru-vm"
version = "0.3.0"
edition = "2021"
description = "High-level VM management for shuru"

[dependencies]
shuru-darwin = { path = "../shuru-darwin" }
shuru-proto = { path = "../shuru-proto" }
anyhow = "1"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
